# paroliere

./: .gitignore  CMakeLists.txt  README.md
paroliere_srv/: Makefile  clientHandler.c  clientHandler.h  dictionary.c  dictionary.h  global.c  global.h  includes.h  init.c  init.h  matrici.txt  matrix.c  matrix.h  paroliere_srv.c  seed.h  serverState.c  serverState.h  shutdown.c  shutdown.h  sigint.c  sigint.h  sigintHandler.c  sigintHandler.h  struct.h  trie.c  trie.h
server/: server
